@@ -24,7 +24,6 @@ from astroid.exceptions import (
 from astroid.inference_tip import inference_tip
 from astroid.manager import AstroidManager
 from astroid.nodes import scoped_nodes
-from astroid.raw_building import build_module
 from astroid.typing import (
     ConstFactoryResult,
     InferenceResult,
@@ -165,8 +164,6 @@ def _extend_builtins(class_transforms):
 
 def on_bootstrap():
     """Called by astroid_bootstrapping()."""
-    AstroidManager().cache_module(build_module("__astroid_synthetic"))
-
     _extend_builtins(
         {
             "bytes": partial(_extend_string_class, code=BYTES_CLASS, rvalue="b''"),
@@ -653,7 +650,7 @@ def infer_property(
         # node.frame. It's somewhere in the builtins module, but we are special
         # casing it for each "property()" call, so we are making up the
         # definition on the spot, ad-hoc.
-        parent=AstroidManager().synthetic_root,
+        parent=scoped_nodes.SYNTHETIC_ROOT,
     )
     prop_func.postinit(
         body=[],
