@@ -116,10 +116,6 @@ class AstroidManager:
         return self.astroid_cache["builtins"]
 
     @property
-    def synthetic_root(self) -> nodes.Module:
-        return self.astroid_cache["__astroid_synthetic"]
-
-    @property
     def prefer_stubs(self) -> bool:
         return AstroidManager.brain["prefer_stubs"]
 
